# streamdown

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  requirements.txt  web.py
__pycache__/: main.cpython-314.pyc.1571814108704  main.cpython-314.pyc.1901262937968  main.cpython-314.pyc.2728439770656  main.cpython-314.pyc.2810650553888  main.cpython-314.pyc.2953962843680
backend/: .cache  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: endpoints.py
backend/app/core/: config.py
backend/app/schemas/: audio.py
backend/app/services/: downloader.py  redis_state.py
backend/app/worker/: main.py  tasks.py
docs/: roadmap.md
ffmpeg/include/libavutil/: ffversion.h
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/ui/: button.tsx  progress.tsx
frontend/src/styles/: index.css
nginx/: nginx.conf
