[tool.poetry]
name = "streamdown-backend"
version = "0.1.0"
description = "Backend for streamdown platform"
authors = ["CTO <cto@streamdown.local>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "*"
uvicorn = "*"
arq = "^0.25.0"
redis = "^5.0.3"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
yt-dlp = "*"
spotdl = "^4.2.0"
spotipy = "^2.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
